<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="center"
    tools:context=".common.QuestionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/questions_header"
            android:textColor="@color/main_blue"
            android:shadowColor="@color/dead_blue"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/questions_cig_smok_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/medium"
            android:text="@string/questions_cig_smok_day"
            android:textColor="@color/black"
            android:shadowColor="@color/main_blue"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_header" />


        <EditText
            android:id="@+id/edit_questions_cig_smok_day"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/questions_sticks"
            android:background="@drawable/question_custom_input"
            android:drawableStart="@drawable/question_custom_cigarette"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:hint="@string/questions_sticks"
            android:inputType="number"
            android:maxLength="4"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text=""
            android:textColor="@color/main_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions_cig_smok_day" />

        <TextView
            android:id="@+id/questions_cig_price_piece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/questions_cig_price_piece"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            android:shadowColor="@color/main_blue"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_questions_cig_smok_day" />


        <EditText
            android:id="@+id/edit_questions_cig_price_piece"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/questions_price"
            android:background="@drawable/question_custom_input"
            android:drawableStart="@drawable/question_custom_peso"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:hint="@string/questions_price"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/main_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions_cig_price_piece" />

        <TextView
            android:id="@+id/questions_years_smoking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/questions_years_smoking"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            android:shadowColor="@color/main_blue"
            android:textSize="18sp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.258"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_questions_cig_price_piece" />

        <EditText
            android:id="@+id/edit_questions_years_smoking"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/questions_years"
            android:background="@drawable/question_custom_input"
            android:drawableStart="@drawable/question_custom_calendar"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:hint="@string/questions_years"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/main_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions_years_smoking" />

        <Button
            android:id="@+id/question_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/question_startmyjourney_button"
            android:fontFamily="@font/bold"
            android:text="@string/questions_done"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_questions_years_smoking" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>